# template-backend-fastapi

./: .env.example  .env_example  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: def890695708_create_users_table.py
src/: app.py  container.py
src/core/schemas/: types.py  user_schemas.py
src/core/services/: base_service.py  user_service.py
src/database/: database_connection.py
src/database/models/: __init__.py  user.py
src/database/query/: query.py
src/database/repositories/: base_repository.py  user_repository.py
src/di/: container.py  dependencies.py
src/routes/: __init__.py  users.py
src/utils/: constant_values.py  exception_handlers.py  exceptions_messages.py  lifespan_events.py  logger.py  regex_patterns.py  settings.py
test/: conftest.py
test/fixtures/: repositories.py  services.py
test/mocks/: user.py
test/repositories/: test_user_repository.py
test/routes/: test_user_routes.py
test/services/: test_user_service.py
test/utils/: app_test_context.py  build_model.py  mock_functions.py
