[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "name",email = "email"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.pylint]
max-args = 10

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev src/app.py'
pre_test = 'task lint'
test = 'pytest -x --cov=src -vv --showlocals --tb=long'
post_test = 'coverage html'
